--- a/fullstackPlacementBackend/package.json
+++ b/fullstackPlacementBackend/package.json
@@ -13,7 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongoose": "^8.9.3",
-    "nodemon": "^3.1.9",
+    "node": "^3.1.9",
     "path": "^0.12.7"
   }
 }
